--- a/ElevatorSystem/pom.xml
+++ b/ElevatorSystem/pom.xml
@@ -24,8 +24,7 @@
     </dependencies>
 
     <properties>
-        <maven.compiler.source>11</maven.compiler.source>
-        <maven.compiler.target>11</maven.compiler.target>
+        <maven.compiler.release>11</maven.compiler.release>
     </properties>
     
 </project>
